Development Portal (2014-04-08 shi)
==============================
No borders for last row in lists


Development Portal (2014-04-07 shi)
==============================
Show multiple countries for SAVi and percentages
Add numbers to lists in SAVi for easy referencing
Renamed Agents to Publishers / Source to Donor
Added High Visibility mode for all views and SAVi


Development Portal (2014-04-04 shi)
==============================
Added Sectors (Activities/Spend/Budgets) pages
Added translations for all Sector pages
Renamed "View all" and "Project title" chunks
Breadcrumbs for new sector pages


Development Portal (2014-04-03 shi)
==============================
New graphs replace old money modules
Fixed css for graphs
Graph titles are links
Replace nth-child types with classes for all tables
Donor views are now in separate pages
Added "About data" and "About data quality" links to all pages
Added new "About data quality" page
Breadcrumbs & translations for every page


Development Portal (2014-04-02 shi)
==============================
Changed Donor to Source & all instances on site
Changed description for Source title and hover states in table
Changed Publishers to Agents (not internal yet)
Added "Back to {country_name}" to Stats pages
Added new query example to about page


Development Portal (2014-04-01 shi)
==============================
Added title to Key Figures
Added more icons
Adding charts to main view
SAVi change line-height in tables for better legibility
Added Map% alert
Added Paths (buttons) on landing page
Added IATI link to landing page


Development Portal (2014-03-31 shi)
==============================
Translations in dropdown menu
Countries are now in alphabetical order
All cells are now clickable links
All font-sizes are in ems for scaling issues in screen resolutions
Refactored code into modular pages
Declarations are now in footer
Added "Reported by reporting-org" to project titles in tables