@@ -332,7 +332,7 @@ a.data_invest:hover		{color:#fff; background-color:rgba(194, 0, 255, 0.8);}
 /*	Beige Alert
 	============================================= */
 .beigealert_wrap		{width:100%; margin:0 auto; background-color:#D80051;}
-.beigealert				{width:100%;; margin:0 auto; color:#fff; font-size:1.0em; line-height:1.25em; text-align:center; padding:10px 0;}
+.beigealert				{width:1280px; margin:0 auto; color:#fff; font-size:1.0em; line-height:1.25em; text-align:center; padding:10px 0;}
 a.beige					{font-weight:bold; color:#FFFF00;}
 a.beige:hover			{color:#fff;}
 
