@@ -340,6 +340,30 @@ IATI标志
 #tongue_hin_tip_text
 查看此在印地文
 
+#theme_high_visibility_tip_text 
+查看该网站在高能见度模式 
+
+#theme_original_tip_text 
+查看该网站在原来的主题
+
+#tongue_eng_text 
+英语（英国） 
+
+#tongue_fra_text 
+法国人 
+
+#tongue_spa_text 
+西班牙人 
+
+#tongue_jpn_text 
+日本 
+
+#tongue_cmn_text 
+中国（简体） 
+
+#tongue_hin_text 
+印地文 
+
 #theme_high_visibility_text 
 高能见度模式 
 
