@@ -340,9 +340,35 @@ View this in Chinese (Simplified)
 #tongue_hin_tip_text
 View this in Hindi
 
+#theme_high_visibility_tip_text
+View the site in High Visibility Mode
+
+#theme_original_tip_text
+View the site in the Original Theme
+
+#tongue_eng_text
+English (UK)
+
+#tongue_fra_text
+French
+
+#tongue_spa_text
+Spanish
+
+#tongue_jpn_text
+Japanese
+
+#tongue_cmn_text
+Chinese (Simplified)
+
+#tongue_hin_text
+Hindi
+
 #theme_high_visibility_text
+High Visibility Mode
 
 #theme_original_text
+Original Theme
 
 #flag_alt_text
 flag
