@@ -343,6 +343,30 @@ Voir ce en Chinois (Simplifié)
 #tongue_hin_tip_text 
 Voir ce en Hindi
 
+#theme_high_visibility_tip_text 
+Voir le site en mode haute visibilité 
+
+#theme_original_tip_text 
+Voir le site dans le thème original
+
+#tongue_eng_text 
+Anglais (Royaume-Uni) 
+
+#tongue_fra_text 
+Français 
+
+#tongue_spa_text 
+Espagnol 
+
+#tongue_jpn_text 
+Japonais 
+
+#tongue_cmn_text 
+Chinois (simplifié) 
+
+#tongue_hin_text 
+Hindi 
+
 #theme_high_visibility_text 
 Mode Haute Visibilité 
 
