@@ -81,12 +81,12 @@
 			<td class="options">
 				<form action="">
 				<select id="tongue_select" name="tongue" class="tongue">
-					<option value="eng" class="tongue" title="{tongue_eng_tip_text}">English</option> 
-					<option value="fra" class="tongue" title="{tongue_fra_tip_text}">French</option> 
-					<option value="spa" class="tongue" title="{tongue_spa_tip_text}">Spanish</option>
-					<option value="jpn" class="tongue" title="{tongue_jpn_tip_text}">Japanese</option>
-					<option value="cmn" class="tongue" title="{tongue_cmn_tip_text}">Chinese (Simplified)</option>
-					<option value="hin" class="tongue" title="{tongue_hin_tip_text}">Hindi</option>
+					<option value="eng" class="tongue" title="{tongue_eng_tip_text}">{tongue_eng_text}</option> 
+					<option value="fra" class="tongue" title="{tongue_fra_tip_text}">{tongue_fra_text}</option> 
+					<option value="spa" class="tongue" title="{tongue_spa_tip_text}">{tongue_spa_text}</option>
+					<option value="jpn" class="tongue" title="{tongue_jpn_tip_text}">{tongue_jpn_text}</option>
+					<option value="cmn" class="tongue" title="{tongue_cmn_tip_text}">{tongue_cmn_text}</option>
+					<option value="hin" class="tongue" title="{tongue_hin_tip_text}">{tongue_hin_text}</option>
 				</select>
 				</form>
 			</td>
@@ -95,8 +95,8 @@
 			<td class="options">
 				<form action="">
 				<select id="tongue_select" name="tongue" class="theme">
-					<option value="eng" class="theme" title="{theme_high_visibility_text}">High Visibility</option> 
-					<option value="fra" class="theme" title="{theme_original_text}">Original</option> 
+					<option value="fra" class="theme" title="{theme_original_tip_text}">{theme_original_text}</option> 
+					<option value="eng" class="theme" title="{theme_high_visibility_tip_text}">{theme_high_visibility_text}</option> 
 				</select>
 				</form>
 			</td>
