@@ -337,8 +337,29 @@ IATI लोगो
 #tongue_cmn_tip_text 
 चीनी में यह दृश्य (सरलीकृत)
 
-#tongue_hin_tip_text 
-हिंदी में यह दृश्य
+#theme_high_visibility_tip_text 
+उच्च दृश्यता मोड में साइट दृश्य 
+
+#theme_original_tip_text 
+मूल थीम में साइट दृश्य
+
+#tongue_eng_text 
+अंग्रेजी (यूके) 
+
+#tongue_fra_text 
+फ्रेंच 
+
+#tongue_spa_text 
+स्पेनिश 
+
+#tongue_jpn_text 
+जापानी 
+
+#tongue_cmn_text 
+चीनी (सरल) 
+
+#tongue_hin_text 
+हिंदी 
 
 #theme_high_visibility_text 
 उच्च दृश्यता मोड 
