@@ -340,6 +340,30 @@ IATIロゴ
 #tongue_hin_tip_text 
 ヒンディー語でこれを表示する
 
+#theme_high_visibility_tip_text 
+視認性の高いモードでサイトを表示 
+
+#theme_original_tip_text 
+オリジナルテーマでサイトを表示
+
+#tongue_eng_text 
+英語（英国） 
+
+#tongue_fra_text 
+フランス語 
+
+#tongue_spa_text 
+スペイン語 
+
+#tongue_jpn_text 
+日本の 
+
+#tongue_cmn_text 
+中国語（簡体字） 
+
+#tongue_hin_text 
+ヒンディー語 
+
 #theme_high_visibility_text 
 視認性の高いモード 
 
