@@ -340,8 +340,29 @@ Ver esta en Japonés
 #tongue_cmn_tip_text 
 Ver esta en Chino (Simplificado)
 
-#tongue_hin_tip_text 
-Ver esto en Hindi
+#theme_high_visibility_tip_text 
+Ver el sitio en el Modo de Alta Visibilidad 
+
+#theme_original_tip_text 
+Ver el sitio en el tema original
+
+#tongue_eng_text 
+Inglés (Reino Unido) 
+
+#tongue_fra_text 
+Francés 
+
+#tongue_spa_text 
+Español 
+
+#tongue_jpn_text 
+Japonés 
+
+#tongue_cmn_text 
+Chino (simplificado) 
+
+#tongue_hin_text 
+Hindi 
 
 #theme_high_visibility_text 
 Modo de Alta Visibilidad 
