@@ -1,6 +1,7 @@
 Development Portal (2014-04-08 shi)
 ==============================
 No borders for last row in lists
+Added translations for tongue dropdown
 
 
 Development Portal (2014-04-07 shi)
